[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Gareth Maddock <9137502+gtm19@users.noreply.github.com>"]
readme = "../README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
